update from home

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,9 @@ ORG_B_TEAM_FOLDER_ID=your_org_b_team_folder_root_id
 # CRM Configuration
 CRM_MODULE_API_NAME=Contacts
 CRM_CHECKBOX_FIELD_API_NAME=Transfer_Complete
-CRM_FOLDER_NAME_FIELD_API_NAME=Source_Folder_Name
+CRM_RECORD_NAME_FIELD_API_NAME=Name
+CRM_WORKDRIVE_URL_FIELD_API_NAME=WorkDrive_URL
+CRM_WORKDRIVE_FOLDER_ID_FIELD_API_NAME=WorkDrive_Folder_ID
 
-# WorkDrive Destination
-WORKDRIVE_DEST_FOLDER_ID=your_destination_folder_id
+# WorkDrive Destination (not used in reversed flow, kept for compatibility)
+WORKDRIVE_DEST_FOLDER_ID=
