Reconfig to Only Update CRM to CRM

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
 # Zoho Region (com, eu, in, au, jp, etc.)
 ZOHO_REGION=com
 
-# Organization A (CRM + WorkDrive Destination)
+# Organization A (CRM - Source of WorkDrive fields)
 ORG_A_CLIENT_ID=your_org_a_client_id
 ORG_A_CLIENT_SECRET=your_org_a_client_secret
 ORG_A_REFRESH_TOKEN=your_org_a_refresh_token
 
-# Organization B (WorkDrive Source)
+# Organization B (CRM - Destination to populate)
 ORG_B_CLIENT_ID=your_org_b_client_id
 ORG_B_CLIENT_SECRET=your_org_b_client_secret
 ORG_B_REFRESH_TOKEN=your_org_b_refresh_token
-ORG_B_TEAM_FOLDER_ID=your_org_b_team_folder_root_id
 
 # CRM Configuration
 CRM_MODULE_API_NAME=Contacts
@@ -18,6 +17,8 @@ CRM_CHECKBOX_FIELD_API_NAME=Transfer_Complete
 CRM_RECORD_NAME_FIELD_API_NAME=Name
 CRM_WORKDRIVE_URL_FIELD_API_NAME=WorkDrive_URL
 CRM_WORKDRIVE_FOLDER_ID_FIELD_API_NAME=WorkDrive_Folder_ID
+CRM_RECORD_UPDATED_FROM_FIELD_API_NAME=Record_Updated_From
 
-# WorkDrive Destination (not used in reversed flow, kept for compatibility)
+# Legacy / unused
+ORG_B_TEAM_FOLDER_ID=
 WORKDRIVE_DEST_FOLDER_ID=
